# Simple-MongoDB

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: check_versions.py
simple_mongodb/: __init__.py  base_collection.py  base_collection.pyi  database_settings.py  example_base_collection.py  exceptions.py  mongodb_client.py  mongodb_client_settings.py
