[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'simple-mongodb'
version = '0.1.0'
description = "Not Available"
requires-python = '>=3.12'
authors = []
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ['motor==3.5.0', 'pydantic==2.8.0', 'pydantic-settings==2.3.4']

[project.urls]
Homepage = 'https://github.com/Gandori/Simple-MongoDB'
Documentation = 'https://github.com/Gandori/Simple-MongoDB'
Repository = 'https://github.com/Gandori/Simple-MongoDB'

[project.optional-dependencies]
dev = [
    'isort==5.13.2',
    'black==24.4.2',
    'pytest==8.2.2',
    'pytest-asyncio==0.23.7',
    'fakeredis==2.23.2',
    'pytest-mock==3.14.0',
    'pytest-sugar==1.0.0',
]

[tool.setuptools]
packages = ['simple_mongodb']
package-data = { 'simple_mongodb' = ['/*.pyi'] }


[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
